Created page with "*{{ComboBox|mm}} : Wenn es sich bei dem Objekt um einen Flächenumfang handelt, wird die Länge des Objekts angezeigt. Die Einheitengröße kann ausgewählt werden: <br />km, hm, dam, m, dm, cm, '''mm''', µm, nm, pm, fm, Zoll, Link, Fuß, Yard, Perch, Kette, Furlong, Meile, Liga, Seemeile. *Länge des Objekts: Länge des Objekts oder Umfang der Fläche {{LineEdit|10,0 mm}}. *Wenn das Objekt ein Kreis ist, wird eine zweite Zeile '''Radius:''' geöffnet, in der der Radius..."

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_FCInfo.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCInfo (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (54% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCInfo (6% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../sv/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (9% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -179,15 +179,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_5:_Einheiten">Abschnitt 5: Einheiten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Units_00.png&amp;filetimestamp=20221021104319&amp;.html" class="mw-file-description" title="FCInfo Einheiten"><img alt="FCInfo Einheiten" src="../File/Macro_FCInfo_Units_00.png" decoding="async" width="397" height="126" class="mw-file-element" data-file-width="397" data-file-height="126"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">mm  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: If the object is a face perimeter, length of the object is displayed. Unit size can be selected&nbsp;:<br>km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, pm, fm, inch, link, foot, yard, perch, chain, furlong, mile, league, nautique.</li>
-<li>Length of the object&nbsp;: Length of the object or perimeter of the face <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm</span>.</li>
-<li>If the object is a circle, a second lineEdit <b>Radius&nbsp;:</b> is opened and display the radius and diameter of circle <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm (dia. 4.0 mm)</span>.</li>
-<li>Perimeter of the shape (12). Perimeter of the object and number of subObject (Edges) contained in the object  <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">120.0 mm</span>.</li></ul>
-<p><i>(you can checked to <code>false</code> the variable <b>switch_setVisible_GBox_005_Value_Unit</b> for hidden the Box)</i>
-</p>
-</div>
-<p><span id="Sector_6:_Inclination"></span>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">mm  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Wenn es sich bei dem Objekt um einen Fl&auml;chenumfang handelt, wird die L&auml;nge des Objekts angezeigt. Die Einheitengr&ouml;&szlig;e kann ausgew&auml;hlt werden: <br>km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, pm, fm, Zoll, Link, Fu&szlig;, Yard, Perch, Kette, Furlong, Meile, Liga, Seemeile.</li>
+<li>L&auml;nge des Objekts: L&auml;nge des Objekts oder Umfang der Fl&auml;che <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10,0 mm</span>.</li>
+<li>Wenn das Objekt ein Kreis ist, wird eine zweite Zeile <b>Radius:</b> ge&ouml;ffnet, in der der Radius und der Durchmesser des Kreises angezeigt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm (dia. 4.0 mm)</span>.</li>
+<li>Umfang der Form (12). Umfang des Objekts und Anzahl der im Objekt enthaltenen Unterobjekte (Kanten) <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">120,0 mm</span>.</li></ul>
+<p><i>(Die Variable kann auf <code>false</code> gesetzt werden. <b>switch_setVisible_GBox_005_Value_Unit</b> zum Verstecken des Kastens)</i>
+</p><p><span id="Sector_6:_Inclination"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_6:_Neigung">Abschnitt 6: Neigung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inclination_00.png&amp;filetimestamp=20221021104232&amp;.html" class="mw-file-description" title="FCInfo Neigung"><img alt="FCInfo Neigung" src="../File/Macro_FCInfo_Inclination_00.png" decoding="async" width="397" height="242" class="mw-file-element" data-file-width="397" data-file-height="242"></a></span>
@@ -722,35 +719,35 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224542
+Cached time: 20260116051111
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.201 seconds
-Real time usage: 0.295 seconds
-Preprocessor visited node count: 1542/1000000
+CPU time usage: 0.215 seconds
+Real time usage: 0.343 seconds
+Preprocessor visited node count: 1541/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 15822/5000000 bytes
+Unstrip post&#8208;expand size: 15827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   92.352      1 -total
-  9.01%    8.318     10 Template:Code
-  5.99%    5.535     10 Template:CheckBox
-  5.65%    5.214     44 Template:LineEdit
-  5.62%    5.190      1 Template:Macro/de
-  5.32%    4.915      8 Template:RadioButton
-  4.89%    4.519      1 Template:CodeDownload
-  4.38%    4.047     19 Template:True
-  4.00%    3.692      1 Template:Codeextralink
-  3.31%    3.054     25 Template:Button
+100.00%   66.441      1 -total
+  8.03%    5.337     10 Template:Code
+  5.20%    3.458      8 Template:RadioButton
+  5.10%    3.391      1 Template:Macro/de
+  4.88%    3.245      1 Template:Codeextralink
+  4.50%    2.987     44 Template:LineEdit
+  4.02%    2.670     10 Template:CheckBox
+  3.50%    2.326      5 Template:SpinBox
+  3.32%    2.207      1 Template:CodeDownload
+  2.32%    1.541      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260111224542 and revision id 1736703. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260116051111 and revision id 1739029. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
