Created page with "*Cost total : Gesamtkosten des ausgewählten Objekts {{LineEdit|0.027 Eu}} *Price (kg/dm3) : Preis des ausgewählten Materials (''Metal Aluminium (Al),2.7,'''''10.0''''',adapt Price'') {{SpinBox|10,0000 Eu (by Kg)}}<br /> ''(Die Variable  '''switch_setVisible_GBox_008_Cost_And_Price''' auf {{false}} gesetzt werden, um den Kasten zu  verstecken)''"

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -261,16 +261,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_8:_Kosten">Abschnitt 8: Kosten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Cost_00.png&amp;filetimestamp=20221021121607&amp;.html" class="mw-file-description" title="FCInfo Kosten"><img alt="FCInfo Kosten" src="../File/Macro_FCInfo_Cost_00.png" decoding="async" width="398" height="92" class="mw-file-element" data-file-width="398" data-file-height="92"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Cost total&nbsp;: cost total of the object selected</li></ul>
+<ul><li>Cost total&nbsp;: Gesamtkosten des ausgew&auml;hlten Objekts</li></ul>
 <p><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.027 Eu</span>
 </p>
-<ul><li>Price (kg/dm3)&nbsp;: price of the material selected (<i>Metal Aluminium (Al),2.7,</i><b>10.0</b><i>,adapt Price</i>)</li></ul>
+<ul><li>Price (kg/dm3)&nbsp;: Preis des ausgew&auml;hlten Materials (<i>Metal Aluminium (Al),2.7,</i><b>10.0</b><i>,adapt Price</i>)</li></ul>
 <p><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10,0000 Eu (by Kg)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span><br>
-<i>(you can checked to <code>false</code> the variable <b>switch_setVisible_GBox_008_Cost_And_Price</b> for hidden the Box)</i>
-</p>
-</div>
-<p><span id="Sector_9:_BoundBox"></span>
+<i>(Die Variable  <b>switch_setVisible_GBox_008_Cost_And_Price</b> auf <code>false</code> gesetzt werden, um den Kasten zu  verstecken)</i>
+</p><p><span id="Sector_9:_BoundBox"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_9:_Begrenzungsrahmen">Abschnitt 9: Begrenzungsrahmen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_BoundBox_00.png&amp;filetimestamp=20221021121719&amp;.html" class="mw-file-description" title="FCInfo Begrenzungsrahmen"><img alt="FCInfo Begrenzungsrahmen" src="../File/Macro_FCInfo_BoundBox_00.png" decoding="async" width="397" height="123" class="mw-file-element" data-file-width="397" data-file-height="123"></a></span>
@@ -719,13 +716,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116051111
+Cached time: 20260116051256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.215 seconds
-Real time usage: 0.343 seconds
-Preprocessor visited node count: 1541/1000000
+CPU time usage: 0.202 seconds
+Real time usage: 0.320 seconds
+Preprocessor visited node count: 1540/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
@@ -735,19 +732,19 @@ Unstrip post&#8208;expand size: 15827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.441      1 -total
-  8.03%    5.337     10 Template:Code
-  5.20%    3.458      8 Template:RadioButton
-  5.10%    3.391      1 Template:Macro/de
-  4.88%    3.245      1 Template:Codeextralink
-  4.50%    2.987     44 Template:LineEdit
-  4.02%    2.670     10 Template:CheckBox
-  3.50%    2.326      5 Template:SpinBox
-  3.32%    2.207      1 Template:CodeDownload
-  2.32%    1.541      4 Template:ComboBox
+100.00%   95.192      1 -total
+  7.83%    7.452      8 Template:RadioButton
+  6.15%    5.853     10 Template:CheckBox
+  5.96%    5.677      5 Template:SpinBox
+  5.56%    5.291      1 Template:Macro/de
+  5.42%    5.156     44 Template:LineEdit
+  4.23%    4.031      3 Template:Incode
+  4.21%    4.007     10 Template:Code
+  3.20%    3.042      4 Template:ComboBox
+  3.05%    2.900      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260116051111 and revision id 1739029. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260116051256 and revision id 1739031. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
