--- a/wiki/DataManager_Workbench.html
+++ b/wiki/DataManager_Workbench.html
@@ -1,26 +1,42 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">DataManager Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="redirectMsg"><p>Redirect to:</p><ul class="redirectText"><li><a href="index.php?title=Https;/royw.github.io/freecad_datamanager_workbench/&amp;action=edit&amp;redlink=1.html" class="new" title="Https://royw.github.io/freecad datamanager workbench/ (page does not exist)">Https://royw.github.io/freecad datamanager workbench/</a></li></ul></div>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">DataManager Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><b>DataManager</b> is a FreeCAD workbench for auditing and cleaning up:
+</p>
+<ul><li><b>VarSets</b> (<code>App::VarSet</code>) and their variables</li>
+<li><b>Spreadsheet aliases</b> (<code>Spreadsheet::Sheet</code>) and their alias names</li></ul>
+<p>It helps you:
+</p>
+<ul><li>Filter and browse VarSets/Spreadsheets and their child items.</li>
+<li>Inspect expression references to variables/aliases.</li>
+<li>Identify and remove <b>unused</b> variables/aliases.</li></ul>
+<ul class="gallery mw-gallery-traditional">
+		<li class="gallerybox" style="width: 155px">
+			<div class="thumb" style="width: 150px; height: 150px;"><span typeof="mw:File"><a href="index.php?title=Datamanager_wb_annotated.png&amp;filetimestamp=20260116045439&amp;.html" class="mw-file-description" title="Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide."><img alt="Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide." src="File/Datamanager_wb_annotated.png" decoding="async" width="120" height="72" class="mw-file-element" data-file-width="2115" data-file-height="1275"></a></span></div>
+			<div class="gallerytext">Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide.</div>
+		</li>
+</ul>
+<p>The documentation for the project is at <a rel="nofollow" class="external text" href="https://royw.github.io/freecad_datamanager_workbench/">https://royw.github.io/freecad_datamanager_workbench/</a>
+</p>
 <!-- 
 NewPP limit report
-Cached time: 20260116045720
+Cached time: 20260116051330
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.001 seconds
-Real time usage: 0.002 seconds
-Preprocessor visited node count: 0/1000000
+CPU time usage: 0.009 seconds
+Real time usage: 0.010 seconds
+Preprocessor visited node count: 5/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
-Highest expansion depth: 0/100
+Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
+Unstrip post&#8208;expand size: 1280/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260116045720 and revision id 1739023. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260116051342 and revision id 1739032. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
