--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -243,13 +243,11 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <p><span id="Create_the_Transom_Sketch_in_the_XY_Plane"></span>
 </p>
 <h3><span class="mw-headline" id="Die_Heckspiegel-Skizze_in_der_XY-Ebene_erstellen">Die Heckspiegel-Skizze in der XY-Ebene erstellen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>create a new sketch <span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>, in the XY-Plane</li>
-<li>start on the Y axis between quadrant III and IV,  and draw upwards into Quadrant IV so that the end point is coincident with the rightmost point of the lowest cross-section Sketch in the YZ-plane<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUsage4.jpg&amp;filetimestamp=20150125145616&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUsage4.jpg" decoding="async" width="500" height="315" class="mw-file-element" data-file-width="500" data-file-height="315"></a></span></li>
-<li>use the same number of line segments as in the stemline Sketch</li>
-<li>save sketch <span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></li>
-<li>for ease of identification it is probably worth naming the Sketch something like "transom sketch"</li></ol>
-</div>
+<ol><li>Neue Skizze <span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> auf der XY-Ebene erzeugen</li>
+<li>Auf der Y-Achse zwischen Quadrant III und IV beginnen und nach oben in Quadrant IV zeichnen, sodass der Endpunkt mit dem Punkt ganz rechts des untersten Querschnitts in der YZ-Ebene &uuml;bereinstimmt.<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUsage4.jpg&amp;filetimestamp=20150125145616&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUsage4.jpg" decoding="async" width="500" height="315" class="mw-file-element" data-file-width="500" data-file-height="315"></a></span></li>
+<li>Dieselbe Anzahl von Liniensegmenten wie in der Stammlinie-Skizze verwenden.</li>
+<li>Die Skizze speichern <span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></li>
+<li>Zur leichteren Identifizierung empfiehlt es sich, die Skizze beispielsweise als &bdquo;transom sketch&rdquo; zu benennen.</li></ol>
 <p><b>Das neue Dokument speichern</b>
 </p><p>Nun kann das Dokument <span typeof="mw:File"><a href="../index.php?title=Document-save.svg&amp;filetimestamp=20240522171704&amp;.html" class="mw-file-description"><img src="../File/Document-save.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>, das die Skizzen enth&auml;lt, die die Rumpfform definieren, gespeichert werden. Dazu vergibt man einen aussagekr&auml;ftigen Namen.
 </p><p>Nachdem alle Skizzen erstellt und positioniert wurden, sollte das Dokument von oben betrachtet wie folgt aussehen <span typeof="mw:File"><a href="../index.php?title=View-top.svg&amp;filetimestamp=20240704202304&amp;.html" class="mw-file-description"><img src="../File/View-top.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>:
@@ -509,13 +507,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115173155
+Cached time: 20260116052510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.206 seconds
-Preprocessor visited node count: 240/1000000
+CPU time usage: 0.148 seconds
+Real time usage: 0.204 seconds
+Preprocessor visited node count: 239/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
@@ -525,13 +523,13 @@ Unstrip post&#8208;expand size: 1953/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.694      1 -total
- 41.35%    3.595      1 Template:Macro/de
- 36.77%    3.197      1 Template:Codeextralink
- 16.82%    1.462      1 Template:Clear
+100.00%   13.715      1 -total
+ 43.02%    5.900      1 Template:Macro/de
+ 36.90%    5.061      1 Template:Codeextralink
+ 17.42%    2.389      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260115173155 and revision id 1738959. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052510 and revision id 1739037. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
