--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -299,11 +299,8 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
   </tr>
 </tbody></table>
 <ul><li>Der XY-Heckspiegel sollte so nah wie m&ouml;glich am hintersten Querschnitt liegen.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Sugar-Scoop Stern</b>
-</p>
-</div>
-<p>Am ehesten auf einer Segelyacht zu finden, ist es ein Produkt des Designs zur Maximierung der Wasserlinienl&auml;nge, um von den Klassenregeln f&uuml;r Segelregatten zu profitieren.
+<p><b>Zuckerschaufel-Heck</b>
+</p><p>Am ehesten auf einer Segelyacht zu finden, ist es ein Produkt des Designs zur Maximierung der Wasserlinienl&auml;nge, um von den Klassenregeln f&uuml;r Segelregatten zu profitieren.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table style="width: 500pix" border="0">
@@ -507,13 +504,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116052510
+Cached time: 20260116052554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.148 seconds
-Real time usage: 0.204 seconds
-Preprocessor visited node count: 239/1000000
+CPU time usage: 0.115 seconds
+Real time usage: 0.156 seconds
+Preprocessor visited node count: 238/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
@@ -523,13 +520,13 @@ Unstrip post&#8208;expand size: 1953/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.715      1 -total
- 43.02%    5.900      1 Template:Macro/de
- 36.90%    5.061      1 Template:Codeextralink
- 17.42%    2.389      1 Template:Clear
+100.00%    7.556      1 -total
+ 43.68%    3.300      1 Template:Macro/de
+ 36.61%    2.766      1 Template:Codeextralink
+ 14.78%    1.117      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052510 and revision id 1739037. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052554 and revision id 1739039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
