Created page with "<table style="width: 500pix" border="0">   <tr>     <td>[[File:Macro_Half-Hull_ModelOption3.jpg]]</td>     <td>[[File:Macro_Half-Hull_ModelOption4.jpg]]</td>   </tr> </table> * Die beiden hintersten Querschnitte so nah wie möglich aneinanderlegen, dann den hintersten der beiden um einen Winkel von 45 Grad (oder wie erforderlich) um die X-Achse drehen."

--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -302,15 +302,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <p><b>Zuckerschaufel-Heck</b>
 </p><p>Am ehesten auf einer Segelyacht zu finden, ist es ein Produkt des Designs zur Maximierung der Wasserlinienl&auml;nge, um von den Klassenregeln f&uuml;r Segelregatten zu profitieren.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table style="width: 500pix" border="0">
   <tbody><tr>
     <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelOption3.jpg&amp;filetimestamp=20150128165706&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelOption3.jpg" decoding="async" width="200" height="150" class="mw-file-element" data-file-width="200" data-file-height="150"></a></span></td>
     <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelOption4.jpg&amp;filetimestamp=20150128165907&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelOption4.jpg" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span></td>
   </tr>
 </tbody></table>
-<ul><li>place the aftmost 2 cross-sections as close as is feasible, then rotate the aftmost of the two through to an angle of 45 degrees (or whatever is called for) around the X-axis</li></ul>
-</div>
+<ul><li>Die beiden hintersten Querschnitte so nah wie m&ouml;glich aneinanderlegen, dann den hintersten der beiden um einen Winkel von 45 Grad (oder wie erforderlich) um die X-Achse drehen.</li></ul>
 <p><b>Kanu-Heck</b>
 </p><p>Zu finden auf allen Arten von Wasserfahrzeugen, Motor- und Segelbooten, Freizeit- und Handelsbooten.
 </p>
@@ -504,13 +502,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116052554
+Cached time: 20260116052615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 238/1000000
+CPU time usage: 0.127 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 237/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
@@ -520,13 +518,13 @@ Unstrip post&#8208;expand size: 1953/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.556      1 -total
- 43.68%    3.300      1 Template:Macro/de
- 36.61%    2.766      1 Template:Codeextralink
- 14.78%    1.117      1 Template:Clear
+100.00%    8.675      1 -total
+ 41.91%    3.636      1 Template:Macro/de
+ 39.18%    3.399      1 Template:Codeextralink
+ 15.02%    1.303      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052554 and revision id 1739039. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052615 and revision id 1739041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
