--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -231,15 +231,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <p><span id="Create_the_Cross-section_Sketch(es)"></span>
 </p>
 <h3><span class="mw-headline" id="Die_Querschnittsskizzen_erstellen">Die Querschnittsskizzen erstellen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>create a new sketch <span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>, in the XZ-Plane</li>
-<li>the following dialog will appear:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelScreenSnapshot1.jpg&amp;filetimestamp=20150125145436&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelScreenSnapshot1.jpg" decoding="async" width="239" height="250" class="mw-file-element" data-file-width="239" data-file-height="250"></a></span><br>The dialog is asking how far from the origin the Sketch should be placed. This will refer to how far the cross-section is from the bottom of the stemline (which was placed at (0,0)). The cross-sections can be equally spaced but need not be. The forward-most cross-section will be at Y=0 (i.e. the origin where the stemline bottom ends) or at Y&lt;=0. The cross-sections will be at increasingly negative Y values until the transom is at the most negative Y value. In the example above, the cross-section Sketch will be placed 50 FreeCAD units from the origin on the negative Y axis.</li>
-<li>start on the Y axis and draw upwards into Quadrant I<br>- the first (i.e. foremost) cross-section should start at origin (0,0) (or it will look odd as the stemline ends at 0,0) but other cross-sections need only start on the Y axis.<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUsage3.jpg&amp;filetimestamp=20150125145234&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUsage3.jpg" decoding="async" width="500" height="555" class="mw-file-element" data-file-width="500" data-file-height="555"></a></span></li>
-<li>use the same number of line segments as in the Stemline Sketch</li>
-<li>save sketch <span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></li>
-<li>repeat as this step necessary, it may be quicker to copy this sketch  and then space the copies on the Y-axis, modifications may be made to the individual Sketches as required</li>
-<li>for naming, it will make things easier to give some sort of sequence to the cross-sections, starting at the bow (i.e. the stemline) and increasing towards the stern (i.e. the transom)</li></ol>
-</div>
+<ol><li>Eine neue Skizze <span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> auf der XZ-Ebene erstellen.</li>
+<li>Der folgende Dialog wird angezeigt:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelScreenSnapshot1.jpg&amp;filetimestamp=20150125145436&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelScreenSnapshot1.jpg" decoding="async" width="239" height="250" class="mw-file-element" data-file-width="239" data-file-height="250"></a></span><br>Der Dialog fragt, wie weit vom Ursprung die Skizze platziert werden soll. Dies bezieht sich darauf, wie weit der Querschnitt vom unteren Ende der Stammlinie (die bei (0,0) platziert wurde) entfernt ist. Die Querschnitte k&ouml;nnen gleichm&auml;&szlig;ig verteilt sein, m&uuml;ssen es aber nicht. Der vorderste Querschnitt befindet sich bei Y=0 (d. h. am Ursprung, wo die Unterseite der Stammlinie endet) oder bei Y&lt;=0. Die Querschnitte befinden sich bei zunehmend negativen Y-Werten, bis der Spiegel den negativsten Y-Wert erreicht. Im obigen Beispiel wird die Querschnittsskizze 50 FreeCAD-Einheiten vom Ursprung entfernt auf der negativen Y-Achse platziert.</li>
+<li>Beginnen Sie auf der Y-Achse und zeichnen Sie nach oben in Quadrant I. Der erste (d. h. vorderste) Querschnitt sollte am Ursprung (0,0) beginnen (sonst sieht es seltsam aus, da die Stammlinie bei 0,0 endet), aber andere Querschnitte m&uuml;ssen nur auf der Y-Achse beginnen.<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUsage3.jpg&amp;filetimestamp=20150125145234&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUsage3.jpg" decoding="async" width="500" height="555" class="mw-file-element" data-file-width="500" data-file-height="555"></a></span></li>
+<li>Verwenden Sie dieselbe Anzahl von Liniensegmenten wie in der Stammlinienzeichnung.</li>
+<li>Skizze speichern <span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></li>
+<li>Diesen Schritt nach Bedarf wiederholen. Es kann schneller sein, diese Skizze zu kopieren  und die Kopien dann auf der Y-Achse zu verteilen. Bei Bedarf k&ouml;nnen &Auml;nderungen an den einzelnen Skizzen vorgenommen werden.</li>
+<li>F&uuml;r die Benennung ist es einfacher, den Querschnitten eine Art Reihenfolge zu geben, beginnend am Bug (d. h. der Buglinie) und steigend in Richtung Heck (d. h. dem Heckspiegel).</li></ol>
 <p><span id="Create_the_Transom_Sketch_in_the_XY_Plane"></span>
 </p>
 <h3><span class="mw-headline" id="Die_Heckspiegel-Skizze_in_der_XY-Ebene_erstellen">Die Heckspiegel-Skizze in der XY-Ebene erstellen</span></h3>
@@ -502,13 +500,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116052615
+Cached time: 20260116053134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 237/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
@@ -518,13 +516,13 @@ Unstrip post&#8208;expand size: 1953/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.675      1 -total
- 41.91%    3.636      1 Template:Macro/de
- 39.18%    3.399      1 Template:Codeextralink
- 15.02%    1.303      1 Template:Clear
+100.00%    5.838      1 -total
+ 55.15%    3.220      1 Template:Macro/de
+ 28.21%    1.647      1 Template:Codeextralink
+ 12.40%    0.724      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116052615 and revision id 1739041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116053133 and revision id 1739044. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
