--- a/wiki/DataManager_Workbench.html
+++ b/wiki/DataManager_Workbench.html
@@ -7,8 +7,8 @@
 <ul><li>Filter and browse VarSets/Spreadsheets and their child items.</li>
 <li>Inspect expression references to variables/aliases.</li>
 <li>Identify and remove <b>unused</b> variables/aliases.</li></ul>
-<ul class="gallery mw-gallery-nolines">
-		<li class="gallerybox" style="width: 805px">
+<ul class="gallery mw-gallery-packed">
+		<li class="gallerybox" style="width: 802px">
 			<div class="thumb" style="width: 800px;"><span typeof="mw:File"><a href="index.php?title=Datamanager_wb_annotated.png&amp;filetimestamp=20260116045439&amp;.html" class="mw-file-description" title="Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide."><img alt="Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide." src="File/Datamanager_wb_annotated.png" decoding="async" width="800" height="482" class="mw-file-element" data-file-width="2115" data-file-height="1275"></a></span></div>
 			<div class="gallerytext">Screenshot: DataManager panel showing both tabs (Varsets and Aliases), with the three-pane layout (parents, children, expressions). Details in the User Guide.</div>
 		</li>
@@ -17,26 +17,26 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116053129
+Cached time: 20260116053229
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.007 seconds
-Real time usage: 0.010 seconds
+CPU time usage: 0.012 seconds
+Real time usage: 0.900 seconds
 Preprocessor visited node count: 5/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1264/5000000 bytes
+Unstrip post&#8208;expand size: 1222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260116053146 and revision id 1739045. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260116053247 and revision id 1739046. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
