--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -26,11 +26,8 @@
 </p>
 <h3><span class="mw-headline" id="Preparare_la_macro">Preparare la macro</span></h3>
 <p>In genere, una macro non &egrave; pensata e fatta per essere eseguita all'avvio, quindi deve essere ottimizzata.
+</p><p>Si prenda in considerazione la macro seguente, scaricata da qualche parte e memorizzata nella cartella "Macro" con il nome "MySuperMacro.FCMacro":
 </p>
-<div class="mw-translate-fuzzy">
-<p>Prendere in considerazione la macro sottostante, memorizzata nella propria cartella 'Macro' con il nome 'MySuperMacro.FCMacro':
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="c1">## Import section ##</span>
 <span class="kn">from</span> <span class="nn">PySide</span> <span class="kn">import</span> <span class="n">QtGui</span>
 
@@ -145,13 +142,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116103834
+Cached time: 20260116103856
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.071 seconds
-Preprocessor visited node count: 148/1000000
+CPU time usage: 0.042 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 147/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -161,14 +158,14 @@ Unstrip post&#8208;expand size: 6961/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.644      1 -total
- 58.98%    7.457      1 Template:Powerdocnavi/it
- 25.35%    3.205      1 Template:Navigation_menu_2
- 25.25%    3.192      3 Template:Code
- 11.84%    1.497      1 Template:TOCright
+100.00%   12.452      1 -total
+ 60.10%    7.484      1 Template:Powerdocnavi/it
+ 20.70%    2.578      1 Template:Navigation_menu_2
+ 19.91%    2.479      3 Template:Code
+ 16.38%    2.040      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116103834 and revision id 1739056. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116103856 and revision id 1739058. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
