Updated page Macro at Startup/it

--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -70,9 +70,7 @@ Il file originale deve essere modificato come segue:
 Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
 </p><p><span id="Integrate_into_FreeCAD_startup"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id="Integrare_la_macro_nell.27avvio_di_FreeCAD"></span><span class="mw-headline" id="Integrare_la_macro_nell'avvio_di_FreeCAD">Integrare la macro nell'avvio di FreeCAD</span></h2>
-</div>
+<h3><span id="Integrare_nell.27avvio_di_FreeCAD"></span><span class="mw-headline" id="Integrare_nell'avvio_di_FreeCAD">Integrare nell'avvio di FreeCAD</span></h3>
 <div class="mw-translate-fuzzy">
 <p>Innanzitutto creare una nuova cartella nella cartella "Mod" dell'utente, ad esempio "MacroStartup".
 Copiare la macro modificata in questa cartella appena creata e rinominala con un'estensione '.py' se questo non &egrave; ancora il caso (nota che se sviluppi la macro da solo, pu&ograve; essere nominata con l'estensione ".py" anche in la cartella "Macro" in modo che non sia necessario rinominare durante la copia).
@@ -142,13 +140,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116103856
+Cached time: 20260116103909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 147/1000000
+CPU time usage: 0.056 seconds
+Real time usage: 0.080 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -158,14 +156,14 @@ Unstrip post&#8208;expand size: 6961/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.452      1 -total
- 60.10%    7.484      1 Template:Powerdocnavi/it
- 20.70%    2.578      1 Template:Navigation_menu_2
- 19.91%    2.479      3 Template:Code
- 16.38%    2.040      1 Template:TOCright
+100.00%   13.258      1 -total
+ 57.87%    7.672      1 Template:Powerdocnavi/it
+ 25.60%    3.394      1 Template:Navigation_menu_2
+ 23.86%    3.164      3 Template:Code
+ 14.26%    1.891      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116103856 and revision id 1739058. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116103909 and revision id 1739060. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
