--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -100,12 +100,8 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
 <span class="n">FreeCADGui</span><span class="o">.</span><span class="n">getMainWindow</span><span class="p">()</span><span class="o">.</span><span class="n">workbenchActivated</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">runStartupMacros</span><span class="p">)</span>
 </pre></div>
 <p>Notare che viene eseguita solo una volta. Se si vuole eseguire pi&ugrave; di una macro, bisogna semplicemente aggiungere le altre nello stesso file (guardare i commenti sul codice precedente).
-</p>
-<div class="mw-translate-fuzzy">
-<p>Il lavoro &egrave; finito. La macro dovrebbe essere eseguita automaticamente al prossimo avvio di FreeCAD.
-</p>
-</div>
-<p>Notare che se la macro originale &egrave; stata scaricata tramite Addon Manager, nel caso di aggiornamento essa viene sovrascritta e quindi &egrave; necessario eseguire di nuovo questi passaggi.
+</p><p>La procedura &egrave; finita. La macro dovrebbe venire eseguita automaticamente al prossimo avvio di FreeCAD.
+</p><p>Notare che se la macro originale &egrave; stata scaricata tramite Addon Manager, nel caso di aggiornamento essa viene sovrascritta e quindi &egrave; necessario eseguire di nuovo questi passaggi.
 </p>
 <h2><span class="mw-headline" id="General_Notes">General Notes</span></h2>
 <ul><li>In the example 'InitGui.py' script above, the function named 'runStartupMacros()' may be changed, so long as you also change the other four references to it, so they all match.</li>
@@ -140,13 +136,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116103909
+Cached time: 20260116104006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.080 seconds
-Preprocessor visited node count: 146/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 145/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -156,14 +152,14 @@ Unstrip post&#8208;expand size: 6961/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.258      1 -total
- 57.87%    7.672      1 Template:Powerdocnavi/it
- 25.60%    3.394      1 Template:Navigation_menu_2
- 23.86%    3.164      3 Template:Code
- 14.26%    1.891      1 Template:TOCright
+100.00%   10.015      1 -total
+ 56.51%    5.660      1 Template:Powerdocnavi/it
+ 21.92%    2.195      3 Template:Code
+ 21.74%    2.177      1 Template:Navigation_menu_2
+ 16.74%    1.676      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116103909 and revision id 1739060. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104006 and revision id 1739062. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
